--- a/style.css
+++ b/style.css
@@ -221,3 +221,132 @@
   }
   /* animations */
   /* end header */
+  
+/*   start  Feature */
+
+.feature {
+    min-height: 140vh;
+    text-align: center;
+    padding-top: 70px;
+    background-color: #f2f9f9;
+  }
+  .feature-subtaitle {
+    font-size: 25px;
+    font-family: var(--titlefont);
+    color: var(--primarycolor);
+    text-transform: uppercase;
+    font-weight: 200;
+    animation: show 1s ease;
+  }
+  .feature-taitle {
+    padding-top: 1.5rem;
+    font-family: var(--titlefont);
+    color: var(--titlecolor);
+    font-size: 4rem;
+    font-weight: 700;
+    padding-left: 250px;
+    padding-right: 225px;
+    animation: show 1.25s ease;
+  }
+  .container {
+    display: flex;
+    padding-top: 80px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+  .feature-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 260px;
+    height: 350px;
+    border: 0.5 solid grey;
+    border: none;
+    box-shadow: 3px 2px 50px rgb(251, 250, 250);
+    text-align: center;
+    background-color: #fff;
+    border-radius: 10px;
+    flex-direction: column;
+  }
+  .text-white {
+    color: #fff;
+    border: 1px solid blue;
+    border: none;
+    border-radius: 100%;
+    background-color: var(--primarycolor);
+    width: 80px;
+    height: 80px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+  .feature-icon-title {
+    margin-top: 10px;
+    text-decoration: none;
+    font-size: 25px;
+    font-family: var(--titlefont);
+    font-weight: 100;
+    color: var(--titlecolor);
+  }
+  .feature-icon-title:hover {
+    color: #29a3bc;
+  }
+  .feature-text {
+    margin-top: 10px;
+    font-family: var(--bodyfont);
+    color: #808080;
+    line-height: 1.5;
+    padding-left: 1rem;
+  }
+  .feature-btn {
+    margin-top: 2rem;
+    text-decoration: none;
+    font-size: 15px;
+    color: var(--secondarycolor);
+    font-family: sans-serif;
+  }
+  .feature-btn:hover {
+    color: var(--primarycolor);
+  }
+  .icon-1{
+  animation: show 1.40s ease;
+  
+  }
+  .icon-2{
+    animation: show 1.50s ease;
+  
+  }
+  .icon-3{
+    animation: show 2s ease;
+  
+  
+  
+  }
+  .icon-4{
+    animation: show 2.10s ease;
+  
+  }
+  /* animations */
+  
+  @keyframes show {
+  
+    0%{
+      transform: translatey(1000px);
+    
+    }
+    
+    100%{
+    transform: translatey(0px);
+  
+  
+  
+  
+  }
+  
+  }
+  
+  /* animations */
+  
+  /* end feature */
