--- a/style.css
+++ b/style.css
@@ -522,3 +522,40 @@
   /* animations */
   
   /* end about */
+  /* start aside */
+
+.aside-center {
+    min-height: 70vh;
+    margin-top: 70px;
+    background: linear-gradient(rgba(25, 60, 154, 0.9), rgba(25, 60, 154, 1)),
+      url("./IMAGES/fact-bg.jpg") center/cover no-repeat;
+  }
+  .aside-container {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 20vh;
+  }
+  .aside-icon {
+    height: 400;
+    width: 300;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .aside-subtaitle {
+    padding-top: 15px;
+    color: #fff;
+    font-size: 25px;
+    text-transform: capitalize;
+    font-family: var(--titlefont);
+    font-weight: 100;
+  }
+  .asid-number {
+    font-size: 35px;
+    color: #fff;
+    padding-top: 25px;
+    font-weight: 600;
+    font-family: var(--bodyfont);
+  }
+  
+  /*  end aside */
