--- a/style.css
+++ b/style.css
@@ -674,3 +674,93 @@
     font-family: var(--bodyfont);
   }
   /* end service */
+  /* start product */
+.products-center {
+    padding-top: 150px;
+  }
+  .product-subtaitle {
+    font-size: 25px;
+    font-family: var(--titlefont);
+    color: var(--primarycolor);
+    text-transform: uppercase;
+    font-weight: 200;
+    text-align: center;
+  }
+  .product-title {
+    padding-top: 1rem;
+    font-family: var(--titlefont);
+    color: var(--titlecolor);
+    font-size: 4rem;
+    font-weight: 700;
+    text-align: center;
+    padding-left: 250px;
+    padding-right: 250px;
+  }
+  .product-container {
+    display: flex;
+    padding-top: 80px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+  .product-item {
+    height: 450px;
+    width: 350px;
+    border: 0.5px solid rgb(220, 217, 217);
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 0 45px rgba(0, 0, 0, 0.08);
+  }
+  .product-data {
+    background-color: #f2f9f9;
+    min-height: 219px;
+  }
+  .product-mb {
+    padding-top: 20px;
+    color: #808080;
+    font-size: 20px;
+  }
+  .product-mb4 {
+    text-decoration: none;
+  }
+  .product-mb3 {
+    padding-top: 20px;
+    font-family: var(--titlefont);
+    text-transform: capitalize;
+    font-size: 25px;
+    font-weight: 400;
+    color: var(--titlecolor);
+  }
+  .product-price {
+    color: var(--primarycolor);
+    font-size: 25px;
+    display: block;
+    padding-top: 20px;
+  }
+  .product-btn {
+    text-decoration: none;
+    display: inline-block;
+    padding-top: 0.5rem;
+    border: none;
+    border: 1px solid #00d1f9;
+    color: #fff;
+    background-color: var(--secondarycolor);
+    border-radius: 35px;
+    width: 130px;
+    height: 40px;
+    text-align: center;
+    font-size: 15px;
+    font-family: var(--bodyfont);
+    text-transform: capitalize;
+    margin-top: 10px;
+    font-weight: 600;
+  }
+  .product-btn:hover {
+    background-color: var(--primarycolor);
+  }
+  .product-mb3:hover {
+    color: #29a3bc;
+  }
+  
+  /* end product */
